feat: change link color and heading order

--- a/src/components/ExchangeRates.astro
+++ b/src/components/ExchangeRates.astro
@@ -49,7 +49,7 @@ const data = (await response.json()) as RawHistorical | BadRequest;
           <a
             href="https://currencybeacon.com"
             target="_blank"
-            class="text-ring hover:underline"
+            class="text-foreground hover:underline"
           >
             CurrencyBeacon API
           </a>
