--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,6 +4,6 @@
   Made with 💜 by <a
     href="https://x.com/sneyderdev"
     target="_blank"
-    class="text-ring hover:underline">@sneyderdev</a
+    class="text-foreground hover:underline">@sneyderdev</a
   >
 </footer>
