feat: add og tags

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,28 @@ import { Background } from "@/components/Background";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>Coinverter - Currency Converter</title>
+    <meta
+      property="description"
+      content="Convert between currencies and stay updated with the latest exchange rates."
+    />
+    <meta property="og:title" content="Coinverter - Currency Converter" />
+    <meta
+      property="og:description"
+      content="Convert between currencies and stay updated with the latest exchange rates."
+    />
+    <meta property="og:site_name" content="Coinverter" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://coinverter.xyz" />
+    <meta property="og:image" content="https://coinverter.xyz/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Coinverter - Currency Converter" />
+    <meta
+      name="twitter:description"
+      content="Convert between currencies and stay updated with the latest exchange rates."
+    />
+    <meta name="twitter:image" content="https://coinverter.xyz/og-image.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
